# valuelib

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  README.md  maintain.sh
cmake/: FindMySQL.cmake  add_sources.cmake
data/: CMakeLists.txt
data/include/: CMakeLists.txt
data/include/valuelib/: CMakeLists.txt
data/include/valuelib/data/: CMakeLists.txt  column.hpp  database_engine.hpp  deduce_native.hpp  entity.hpp  enumeration.hpp  field.hpp  identifier.hpp  metafunctions.hpp  posix_time.hpp  storable_data.hpp  storage.hpp  string_data.hpp  type_traits.hpp  uuid.hpp
data/include/valuelib/data/connectors/: CMakeLists.txt  cppconn.hpp
data/include/valuelib/data/database/: CMakeLists.txt  ddl_context.hpp  entity.hpp  factory.hpp  record_set.hpp
data/include/valuelib/data/operation/: CMakeLists.txt  create_entity.hpp
data/include/valuelib/data/sql/: CMakeLists.txt  dialect.hpp  table_entity.hpp
data/include/valuelib/data/sql/mysql/: CMakeLists.txt  create.hpp  dialect.hpp  drop.hpp  insert.hpp  utility.hpp
data/src/: CMakeLists.txt  noddy.cpp  uuid.cpp
data/test/: CMakeLists.txt  testDataFields.cpp  test_utils.cpp  test_utils.hpp
database/: CMakeLists.txt
database/include/: CMakeLists.txt
database/include/value/: CMakeLists.txt
database/include/value/database/: CMakeLists.txt  config.hpp  config.hpp.in  pointer_traits.hpp
database/src/: CMakeLists.txt  foop.cpp
database/test/: basic_test.cpp
debug/: CMakeLists.txt
debug/include/valuelib/: CMakeLists.txt
debug/include/valuelib/debug/: CMakeLists.txt  any_printer.hpp  chrono.hpp  demangle.hpp  emit_args.hpp  exception.hpp  method.hpp  object.hpp  print.hpp  trace.hpp  typeinfo.hpp  unwrap.hpp  vector.hpp
debug/src/: CMakeLists.txt  any_printer.cpp  demangle.cpp  trace.cpp  unwrap.cpp
debug/test/: CMakeLists.txt  testDemangle.cpp  testTrace.cpp
immutable/: CMakeLists.txt
immutable/include/valuelib/: CMakeLists.txt
immutable/include/valuelib/immutable/: CMakeLists.txt  string.hpp
immutable/src/: noddy.cpp
immutable/test/: CMakeLists.txt  testString.cpp
mysql/: CMakeLists.txt
mysql/include/: CMakeLists.txt
mysql/include/value/: CMakeLists.txt
mysql/include/value/mysql/: CMakeLists.txt  connection.hpp  connection_invariants.hpp  error.hpp  execution_result.hpp  extract_optional.hpp  mysql_api.hpp  optional.hpp  result_set.hpp  statement.hpp  transaction.hpp  types.hpp
mysql/src/: CMakeLists.txt  connection.cpp  connection_impl.cpp  connection_impl.hpp  connection_instance.cpp  connection_instance.hpp  connection_instance_impl.cpp  connection_instance_impl.hpp  connection_instance_pool.cpp  connection_instance_pool.hpp  connection_invariants.cpp  connection_pool.cpp  connection_pool.hpp  dynamic_buffer.cpp  dynamic_buffer.hpp  error.hpp  field_data.cpp  mysql_api.cpp  mysql_api.hpp  result_binder.cpp  result_binder.hpp  statement.cpp  transaction.cpp
mysql/src/connection/: CMakeLists.txt  impl.cpp  impl.hpp
mysql/src/statement/: impl.cpp  impl.hpp
mysql/src/transaction/: impl.cpp  impl.hpp
mysql/test/: CMakeLists.txt  basic_test.cpp
pointers/: CMakeLists.txt
pointers/include/valuelib/: CMakeLists.txt
pointers/include/valuelib/pointers/: CMakeLists.txt
pointers/pointers/: CMakeLists.txt  pointer_traits.hpp
pointers/src/: CMakeLists.txt  pointer_traits.cpp
pointers/test/: basic_test.cpp
stdext/: CMakeLists.txt
stdext/include/valuelib/: CMakeLists.txt
stdext/include/valuelib/stdext/: CMakeLists.txt  algorithm.hpp  apply.hpp  bits.hpp  byte_buffer.hpp  exception.hpp  invoke.hpp  key_iterator.hpp  light_future.hpp  string_algorithm.hpp  string_traits.hpp  unique_ptr.hpp
stdext/src/: CMakeLists.txt  dummy.cpp
stdext/stdext/: CMakeLists.txt  bind_weak.hpp  shared_string.hpp  string_algorithm.hpp  string_traits.hpp
stdext/test/: CMakeLists.txt  bind_weak.cpp  bits.cpp  invoke.cpp  key_iterator.cpp  light_future.cpp  shared_string.cpp  unique_ptr.cpp
tuple/: CMakeLists.txt
tuple/include/valuelib/: CMakeLists.txt
tuple/include/valuelib/tuple/: CMakeLists.txt  algorithm.hpp  metafunction.hpp  print.hpp
tuple/src/: noddy.cpp
tuple/test/: CMakeLists.txt  test_algorithm.cpp  test_tuple_print.cpp
